SERVER-55443 Do not report that read source need to be changed to lastApplied for linearizable read concern